# giskard_pr2

./: .gitignore  CMakeLists.txt  README.md  package.xml
config/: interactive.rviz  plotjuggler_visualize_controller_state.xml  pr2_interactive_markers.yaml  qp_controller_trajectory.yaml
controller_specs/: pr2_cart_cart_control.yaml  pr2_cart_joint_control.yaml
launch/: gui.launch  interactive_markers.launch  interactive_markers_demo.launch  pr2.launch  pr2_qp_controller.launch  qp_controller.launch  qp_controller_trajectory.launch  test_action_server.launch  whole_body_controller.launch
rosinstall/: catkin_indigo.rosinstall
