<?xml version="1.0"?>
<package>
  <name>giskard_pr2</name>
  <version>0.0.2</version>
  <description>
    Robot-specific configuration and launch-files to use giskard controllers on the pr2 robot.
  </description>

  <maintainer email="georg.bartels@cs.uni-bremen.de">Georg Bartels</maintainer>
  <author email="georg.bartels@cs.uni-bremen.de">Georg Bartels</author>

  <license>GPLv2</license>

  <buildtool_depend>catkin</buildtool_depend>
  <run_depend>iai_pr2_sim</run_depend>
  <run_depend>iai_pr2_controller_manager</run_depend>
  <run_depend>giskard_ros</run_depend>
  <run_depend>rviz</run_depend>
</package>
